<?xml version="1.0" encoding="utf-8"?>

<!-- File for all string values used in the app for english lang local settings-->

<resources>
    <string name="app_name">Messaging App</string>
    <string name="address_field_label">Add phone number/e-mail address:</string>
    <string name="subject_field_label">Add email subject:</string>
    <string name="body_label">Add sms/email body:</string>


    <string name="address_field_placeholder">phone/email...</string>
    <string name="body_placeholder">Text...</string>
    <string name="contact_field_placeholder">Subject...</string>

    <string name="button_sms_text">Send SMS</string>
    <string name="button_email_text">Send Email</string>
    <string name="button_clear_text">Clear</string>

    <string name="invalid_phone_number_toast">Invalid phone number or empty contact field</string>
    <string name="invalid_email_toast">Invalid email or empty sender field</string>

    <string name="email_app_chooser_prompt">Choose Email Compatible Application:</string>

</resources>