<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_linear_layout"
    android:padding="@dimen/activity_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_field_label"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        />

    <EditText
        android:id="@+id/contact_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_field_placeholder"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_gravity="top"
        android:textSize="@dimen/edit_text_size"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_label"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        android:paddingTop="20dp"
        />

    <!-- last two setting are there to avoid overflow-->
    <EditText
        android:id="@+id/body_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/body_placeholder"
        android:textSize="@dimen/edit_text_size"
        android:gravity="top"
        android:layout_weight="2"
        android:minHeight="48dp"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        />

    <!--Needs to add the following in the build.gradle dependencies section
            implementation 'com.google.android.flexbox:flexbox:3.0.0'
    and migration to AndroidX-->
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:justifyContent="space_around">

        <Button
            android:id="@+id/button_sms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_sms_text"
            android:textSize="@dimen/button_text_size"
            android:textAllCaps="false"
            android:padding="5dp"
            />

        <Button
            android:id="@+id/button_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_email_text"
            android:textSize="@dimen/button_text_size"
            android:textAllCaps="false"
            android:padding="5dp"
            />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_clear_text"
            android:textSize="@dimen/button_text_size"
            android:textAllCaps="false"
            android:padding="5dp"
             />
    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>